# docs/swagger.json
@@ -4,18 +4,135 @@
     "contact": {}
   },
   "paths": {
+    "/v1/comment/create/": {
+      "post": {
+        "produces": [
+          "application/json"
+        ],
+        "summary": "创建评论",
+        "parameters": [
+          {
+            "description": "作者",
+            "name": "author",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "description": "内容",
+            "name": "content",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "description": "所属文章id",
+            "name": "postID",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {}
+      }
+    },
     "/v1/comment/delete/:id": {
       "delete": {
+        "produces": [
+          "application/json"
+        ],
+        "summary": "删除评论",
+        "parameters": [
+          {
+            "type": "string",
+            "description": "评论id",
+            "name": "id",
+            "in": "path",
+            "required": true
+          }
+        ],
         "responses": {}
       }
     },
     "/v1/comment/query/": {
       "get": {
+        "produces": [
+          "application/json"
+        ],
+        "summary": "查询评论",
+        "parameters": [
+          {
+            "description": "文章ID",
+            "name": "id",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "description": "页码",
+            "name": "page",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "description": "页面大小",
+            "name": "page_size",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {}
       }
     },
     "/v1/comment/update/:id": {
       "put": {
+        "produces": [
+          "application/json"
+        ],
+        "summary": "更新评论",
+        "parameters": [
+          {
+            "description": "作者",
+            "name": "author",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "description": "内容",
+            "name": "content",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "description": "所属文章id",
+            "name": "postID",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {}
       }
     },
@@ -313,6 +430,62 @@
     },
     "/v1/user/update/:id": {
       "put": {
+        "produces": [
+          "application/json"
+        ],
+        "summary": "更新用户",
+        "parameters": [
+          {
+            "type": "string",
+            "description": "用户ID(可选)",
+            "name": "id",
+            "in": "query"
+          },
+          {
+            "description": "用户名",
+            "name": "username",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "description": "密码",
+            "name": "password",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "description": "昵称",
+            "name": "nickname",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "description": "Email",
+            "name": "email",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "description": "手机号",
+            "name": "phone",
+            "in": "body",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {}
       }
     }
